sample/fails/NCase1.smt2
; --full-saturate-quant --inst-when=full-last-call --inst-no-entail --term-db-mode=relevant --multi-trigger-linear --no-statistics --random-seed=1 --lang=smt2 --continued-execution --tlimit 212
(set-option :produce-unsat-cores true)
(set-logic AUFLIA)
(declare-sort S$ 0)
(declare-sort Nat$ 0)
(declare-sort Enat$ 0)
(declare-sort S_set$ 0)
(declare-sort S_v_hd$ 0)
(declare-sort S_v_tm$ 0)
(declare-sort S_bool_fun$ 0)
(declare-sort V_s_set_fun$ 0)
(declare-sort S_s_bool_fun_fun$ 0)
(declare-fun sa$ () S_v_tm$)
(declare-fun ua$ () S_v_tm$)
(declare-fun one$ () Enat$)
(declare-fun head$ (S_v_tm$) S_v_hd$)
(declare-fun zero$ () Nat$)
(declare-fun gt_hd$ (S_s_bool_fun_fun$ V_s_set_fun$ S_v_hd$ S_v_hd$) Bool)
(declare-fun gt_sym$ () S_s_bool_fun_fun$)
(declare-fun member$ (S$ S_set$) Bool)
(declare-fun wt_sym$ (S$) Nat$)
(declare-fun fun_app$ (S_bool_fun$ S$) Bool)
(declare-fun fun_app$a (S_s_bool_fun_fun$ S$) S_bool_fun$)
(declare-fun arity_sym$ (S$) Enat$)
(declare-fun ground_heads$ (V_s_set_fun$ S_v_hd$) S_set$)
(declare-fun ground_heads_var$ () V_s_set_fun$)
(assert (! (not false) :named a0))
(assert (! (forall ((?v0 S_v_hd$) (?v1 S_v_hd$)) (= (gt_hd$ gt_sym$ ground_heads_var$ ?v0 ?v1) (forall ((?v2 S$)) (=> (member$ ?v2 (ground_heads$ ground_heads_var$ ?v0)) (forall ((?v3 S$)) (=> (member$ ?v3 (ground_heads$ ground_heads_var$ ?v1)) (fun_app$ (fun_app$a gt_sym$ ?v2) ?v3))))))) :named a1))
(assert (! (forall ((?v0 S$) (?v1 S$)) (=> (and (= (arity_sym$ ?v0) one$) (= (wt_sym$ ?v0) zero$)) (or (fun_app$ (fun_app$a gt_sym$ ?v0) ?v1) (= ?v1 ?v0)))) :named a2))
(assert (! (gt_hd$ gt_sym$ ground_heads_var$ (head$ sa$) (head$ ua$)) :named a3))
(assert (! (forall ((?v0 S$) (?v1 S$)) (=> (fun_app$ (fun_app$a gt_sym$ ?v0) ?v1) (not (fun_app$ (fun_app$a gt_sym$ ?v1) ?v0)))) :named a4))
(assert (! (forall ((?v0 S_v_hd$)) (not (gt_hd$ gt_sym$ ground_heads_var$ ?v0 ?v0))) :named a5))
(assert (! (exists ((?v0 S$)) (and (member$ ?v0 (ground_heads$ ground_heads_var$ (head$ ua$))) (and (= (arity_sym$ ?v0) one$) (= (wt_sym$ ?v0) zero$)))) :named a6))
(check-sat)
